# migrator_postgres_maestro_v2

./: .claudeignore  .geminiignore.txt  .gitignore  03_create_foreign_key_tudo.sql  CLAUDE.md  CRIACAO_BANCO_POSTGRES_SCCI_C6_EQUINIX_25ABR.sql  CRIACAO_BANCO_POSTGRES_SCCI_C6_PRODUCAO_V2.sql  GEMINI.md  LEMBRETES_MIGRATOR.txt  LEMBRETES_MIGRATOR_ALLTABLES_PLANO_B.txt  LEMBRETES_MIGRATOR_ALLTABLES_PLANO_B_QUINTA_22ABR_V2.txt  LEMBRETES_MIGRATOR_ALLTABLES_PLANO_B_SABADO_11ABR_V2.txt  LEMBRETES_MIGRATOR_ALLTABLES_PLANO_B_SABADO_LOCAL_DOCKER11ABR_V2.txt  LEMBRETES_MIGRATOR_PLANO_A_POSTGRES_CONVERTE_V1.txt  Migrator_parallel_doc_oper.md  PRD.md  PosMigracao_comparaChecksum_bytea.py  README.md  TEMPLATE_CRIACAO_BANCO_POSTGRES_SCCI_ABRIL2026_V1.sql  agent.bat  agent.sh  ai_schema_fixes_276_29abril.sql  ajusta_base_firebird.sql  ajuste_manual_diferenca_firebird_cria976_29abril.sql  ajuste_manual_diferencas_fb2pg_cria976b_4maio.sql  apply_dll_fix.py  c6_producao_cria_sql_ec2.sql  c6_producao_pg_converter_equinix.sql  chama_migrator.sh  chama_migrator_doc_oper.sh  check_arch.py  compara_cont_fb2pg.py  compara_estrutura_FULL_fb2pg.py  compara_estrutura_fb2pg.py  config BKP_08ABR.yaml  config.yaml.example  config.yaml.exemplo  config_smalltables.yaml  constraint_state_controleversao.json  correcoes_colunas_pg_faltando_976_30abril.sql  (+50 more)
MIGRACAO_0001/: migration.db  migration_audit.db
MIGRACAO_0004/: migration.db  migration_audit.db
MIGRACAO_0005/: disable_constraints_documento_operacao.sql  disable_constraints_log_eventos.sql  enable_constraints_documento_operacao.sql  migration.db  (+14 more)
(+68 files in other folders)
